# Stl-algorithms

./: CMakeLists.txt  README.md
src/algorithms/: CMakeLists.txt
src/algorithms/include/algorithms/: algorithms.h
tests/: CMakeLists.txt  main.cpp  tests_algorithms.cpp
